public/personal-website/resources/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: personal-website
  template:
    metadata:
      labels:
        app: personal-website
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: personal-website-conf
              mountPath: /etc/nginx
            - name: personal-website-files
              mountPath: /usr/share/nginx/html
      volumes:
        - name: personal-website-conf
          configMap:
            name: personal-website-conf
        - name: personal-website-files
          configMap:
            name: personal-website-files
