public/personal-website/resources/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: personal-website
spec:
  replicas: 3
  selector:
    matchLabels:
      app: personal-website
  strategy:
    canary:
      stableService: personal-website-stable
      canaryService: personal-website-canary
      stableMetadata:
        labels:
          role: stable
      canaryMetadata:
        labels:
          role: canary
      dynamicStableScale: true
      steps:
        - experiment:
            templates:
              - name: canary
                specRef: canary
                service:
                  name: personal-website-experiment
            analyses:
              - name: test-connection
                templateName: test-connection
                requiredForCompletion: true
                args:
                  - name: endpoint
                    value: "https://tjzimmerman.com/"
                  - name: header
                    value: "experiment: true"
        - setWeight: 33
        - setWeight: 66
        - setWeight: 100
      trafficRouting:
        istio:
          virtualService:
            name: personal-website
            routes:
              - personal-website-stable
  template:
    metadata:
      labels:
        app: personal-website
    spec:
      containers:
        - name: personal-website
          image: ghcr.io/zimmertr/personal-website
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: metrics
              containerPort: 8080
              protocol: TCP
