public/personal-website/resources/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    # io.cilium/lb-ipam-ips: 192.168.40.150
  name: personal-website-service
spec:
  selector:
    app: personal-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  # type: LoadBalancer
