public/personal-website/resources/gateway.yml
# spec.addresses seems to be ignored for me. So instead I manually associate a LoadBalancer service
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: personal-website
  annotations:
    cert-manager.io/issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  gatewayClassName: cilium
  addresses:
    - type: Hostname
      value: tjzimmerman.com
  listeners:
  - name: http
    hostname: "tjzimmerman.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
         from: All
  - hostname: "tjzimmerman.com"
    name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: tjzimmerman-com
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: v1
kind: Service
metadata:
  name: cilium-gateway-personal-website
  annotations:
    io.cilium/lb-ipam-ips: 192.168.40.150
spec:
  ports:
    - name: port-80
      port: 80
    - name: port-443
      port: 443
  type: LoadBalancer
